# basecamp

./: CHANGELOG.md  LICENSE  README.md  basecamp.cabal
app/: Main.hs
src/: Basecamp.hs
